--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -7,6 +7,18 @@
 
 
 <body>
+    <nav id="nav">
+        <div id="nav-left">
+            <img id="hamburger" src="img/whamburger.png" onclick="openNav()">
+        </div>
+        <div id="nav-center">
+            <a><img src="img/cross.png" id="cross" onclick="closeNav()"></a>
+            <a href="/" class="link">Accueil</a>
+            <a href="/informations" class="link">Informations</a>
+            <a href="/register" class="link">Inscription</a>
+            <a href="/contact" class="link">Contact</a>
+        </div>
+    </nav>
     <div id = "register-main" class = "wrapper">
         <h1>Inscription</h1>
         <div id = "login-wrapper">
