--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -18,6 +18,9 @@
             <a href="/register" class="link">Inscription</a>
             <a href="/contact" class="link">Contact</a>
         </div>
+        <div id = "nav-right">
+            <form action = "/login" id="login" method = "post"><button type = "submit" class = "button-dark">Connexion</button></form>
+        </div>
     </nav>
     <div id = "register-main" class = "wrapper">
         <h1>Inscription</h1>
