--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@
     --nav-hover-color:#d6a232;
 
     --light-text-color:#f1f1f1;
+    --med-text-color:#929292;
     --dark-text-color:#dddddd;
     --highlight-yellow:#e9d043;
     --highlight-blue:#25ceec;;
@@ -273,7 +274,12 @@ h1{
     z-index:0;
 }
 .exercise-desc{
-    
+    color:var(--dark-text-color);
+    font-size:1.3em;
+}
+.exercise-quicknote{
+    color:var(--med-text-color);
+    font-size:2vh;
 }
 .radio{
     background:var(--main-bg-color-bis);
