--- a/views/partials/navbar-tested.ejs
+++ b/views/partials/navbar-tested.ejs
@@ -7,8 +7,8 @@
     <div id="nav-center">
         <a><img src="img/cross.png" id="cross" onclick="closeNav()"></a>
         <a href="/profile" class="link">Résumé</a>
-        <a href="/results" class="link">Résultats</a>
         <a href="/goals" class="link">Objectifs</a>
+        <a href="/test" class="link">Évaluation</a>
         <a href="/contact" class="link">Contact</a>
     </div>
     <div id="nav-right">
@@ -20,4 +20,5 @@
             <a href="/login"><img id="log" src="img/wlog.png"></a> <!-- Redirect to login page if not connected -->
         <%}%>
     </div>
+
 </nav>
