--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -28,17 +28,25 @@
             <form id = "login-form" method = "post" action = "/register">
                 <label for = "username">Nom *</label>
                 <div class = "row-input">
-                    <input id = "username" type = "text" name = "nom" autocomplete="name">
+                    <input id = "username" type = "text" name = "nom" autocomplete="name" required>
                 </div> 
                 <label for = "email">Email *</label>
                 <div class = "row-input">
-                    <input id = "email" type = "email" name = "email" autocomplete="email">
+                    <input id = "email" type = "email" name = "email" autocomplete="email" required>
                 </div>                
                 <label for = "password">Mot de passe *</label>
                 <div class = "row-input">
-                    <input id = "password" type = "password" name = "password" autocomplete="current-password"><img id = "eye" class = "button-yellow" src = "img/closed-eye.png" onclick = "showWrittenPassword()">
+                    <input id = "password" type = "password" name = "password" autocomplete="current-password" required><img id = "eye" class = "button-yellow" src = "img/closed-eye.png" onclick = "showWrittenPassword()">
                 </div>
-                <button class = "button-yellow" onclick = "checkAddUser()" type = "submit">S'inscrire</button>
+                <label for = "repeat-password">Répetez le mot de passe *</label>
+                <div class = "row-input">
+                    <input id = "repeat-password" type = "password" name = "repeat-password" autocomplete="current-password" required>
+                </div>
+                <div class = "row-input">
+                    <input type = "checkbox" name = "conditions" id = "conditions" style = "width:auto; margin-right:1em;" required> 
+                    <label for = "conditions" style = "background:var(--main-bg-color-bis);">J'accepte les conditions d'utilisateurs</label>
+                </div>
+                <button class = "button-yellow" onclick = "checkAddUser()" type = "submit" onsubmit="checkAddUser()">S'inscrire</button>
             </form>
             <div class = "center-right"><a href = "/login">Vous avez déjà un compte ?</a></div>
         </div>
