--- a/views/pages/informations.ejs
+++ b/views/pages/informations.ejs
@@ -18,8 +18,12 @@
         <%-include("../partials/navbar.ejs"); %>
     <%}%>
     <h1>Informations</h1>
-    <h1>Désolé, la page est en construction !</h1>
+    <div class = "wrapper">
+        <h2 class = "welcome-text1" style = "animation:none; filter: opacity(1);"><span class = "highlight-yellow">Inscrivez-vous</span> et entrez vos données sur votre forme physique (taille, poids, âge...) lors de votre évaluation et obtenez votre <span class = "highlight-green">note</span></h2>
+        <h2 class = "welcome-text1" style = "animation:none; filter: opacity(1);">Faites des <span class = "highlight-yellow">exercices</span> et suivez <span class = "highlight-blue">vos objectifs</span> pour obtenir de meilleurs scores !</h2>
 
+        <a class = "button-yellow" href = "/register">C'est parti !</a>
+    </div>
     <script src ="js/animations.js"></script>
 </body>
 
