--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,10 @@
             <div class = "parent-image" id = "preview-parent1">
                 <div class = "main-page-image" id = "main-img2"></div>    
             </div>
-            <h2 id = "preview-text1">Un service <span class = "highlight-yellow">adapatatif</span> à vos besoins</h2>
+            <div class = "wrapper" style = "width:30%; background:var(--bg-med-color);">
+                <h2 id = "preview-text1" style = "background:var(--bg-med-color);">Un service <span class = "highlight-yellow">adapatatif</span> à vos besoins</h2>
+                <h2 id = "preview-text1" style = "background:var(--bg-med-color);">Des <span class = "highlight-yellow">objectifs</span> propres à vos <span class = "highlight-blue" style = "background:var(--bg-med-color); ">capacités</span></h2>
+            </div>  
         </div>
         <div id = "preview2" class = wrapper>
             <h2 id = "preview-text2">Vous voulez plus d'informations ? Renseignez-vous sur notre application !</h2>
