--- a/views/pages/informations.ejs
+++ b/views/pages/informations.ejs
@@ -20,7 +20,7 @@
     <h1>Informations</h1>
     <div class = "wrapper">
         <h2 class = "welcome-text1" style = "animation:none; filter: opacity(1);"><span class = "highlight-yellow">Inscrivez-vous</span> et entrez vos données sur votre forme physique (taille, poids, âge...) lors de votre évaluation et obtenez votre <span class = "highlight-green">note</span></h2>
-        <h2 class = "welcome-text1" style = "animation:none; filter: opacity(1);">Faites des <span class = "highlight-yellow">exercices</span> et suivez <span class = "highlight-blue">vos objectifs</span> pour obtenir de meilleurs scores !</h2>
+        <h2 class = "welcome-text1" style = "animation:none; filter: opacity(1);">Faites des <span class = "highlight-yellow">exercices</span> et suivez <span class = "highlight-blue">vos objectifs</span> pour obtenir de <span class = "highlight-green">meilleurs scores !</span></h2>
 
         <a class = "button-yellow" href = "/register">C'est parti !</a>
     </div>
