--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -95,7 +95,7 @@
                     <%if(utilisateur.nbEtape == 3){%>
                         <br>
                         <h2 class = "exercise-desc" style = "color:var(--highlight-yellow);">EXERCICE</h2>
-                        <h2 class = "exercise-desc">Placez-vous <span class = "highlight-blue">assis sur le sol </span><span class = "exercise-quicknote">(avec un tapis ou une serviette)</span> et <span class = "highlight-yellow">effectuez</span> des crunchs</h2>
+                        <h2 class = "exercise-desc">Placez-vous <span class = "highlight-blue">assis sur le sol </span><span class = "exercise-quicknote">(avec un tapis ou une serviette)</span> et <span class = "highlight-yellow">effectuez</span> des crunches</h2>
                         <img class = "exercise-img" src = "img/exo2.png">
                         <h2 class = "exercise-desc"><span class = "highlight-yellow">Comptez</span> votre nombre de <span class = "highlight-blue">crunch fait</span> et <span class = "highlight-yellow">arrêtez</span> quand vous ne vous sentez <span class = "highlight-blue">plus capable</span></h2>
                         <h2 class = "exercise-quicknote">Rappel: Échauffez-vous bien avant de commencer (prenez soin de vous !)</h2>
