--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,8 +123,11 @@ nav{
 }
 #preview-text1{
     font-size:1em;
-    width:30%;
     height:12vh;
+}
+#preview-text2{
+    padding:1em;
+    font-size:1em;
 }
 
 
@@ -212,7 +215,7 @@ h1{
 #preview2{
     display:flex;
     flex-direction: column;
-    height:50vh;
+    height:30vh;
     align-items: center;
     justify-content: space-evenly;
 }
@@ -396,6 +399,9 @@ h1{
 }
 #login-form >*:not(.button-yellow){
     background:var(--main-bg-color-bis);
+}
+input{
+    overflow-y:hidden;
 }
 .row-input{
     display:flex;
