--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -19,7 +19,27 @@
         <%-include("../partials/navbar.ejs"); %>
     <%}%>
     <h1>Contact</h1>
-    <h1>Désolé, la page est en construction !</h1>
+    
+    <div class = "wrapper">
+        <div id = "welcome-line"></div>
+        <div id = "pdg-texts" style = "display:flex; align-items: center; justify-content: space-evenly; padding:1em; width:100%;">
+            <h2 class = "pdg-text">HEUB Tibaud</h2>
+            <h2 class = "pdg-text">MOISAN Romuald</h2>
+            <h2 class = "pdg-text">RÉAUX Renan</h2>
+        </div>
+        
+        <div id = "pdg-img" style = "display:flex; align-items: center; justify-content: space-evenly; padding:0 1em; width:100%;">
+            <div class = "parent-image-pdg">
+                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.jpg");'></div>
+            </div>
+            <div class = "parent-image-pdg">
+                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.jpg");'></div>
+            </div>
+            <div class = "parent-image-pdg">
+                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.jpg");'></div>
+            </div>
+        </div>
+    </div>
     <script src ="js/animations.js"></script>
 </body>
 
