--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,11 @@
 <footer>
-    
+    <div id = "footer-left">
+
+    </div>
+    <div id = "footer-center">
+        
+    </div>
+    <div id = "footer-right">
+
+    </div>
 </footer>
