adding profile visuals

--- a/views/pages/test.ejs
+++ b/views/pages/test.ejs
@@ -75,6 +75,7 @@
                             </div>
                             <button class = "button-yellow" type = "submit">Continuer</button>
                         </form>
+                        <h2 class = "exercise-quicknote">Note: Vous pouvez vous munir de ces informations à l'aide de votre médecin, n'hésitez pas à revenir sur cette page lorsque vous aurez tout </h2>
                     <%}%>
                     <%if(utilisateur.nbEtape == 2){%>
                         <br>
