--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -29,14 +29,14 @@
         </div>
         
         <div id = "pdg-img" style = "display:flex; align-items: center; justify-content: space-evenly; padding:0 1em; width:100%;">
-            <div class = "parent-image-pdg">
-                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.jpg");'></div>
+            <div class = "parent-image-pdg" style = "margin:auto;">
+                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.png");'></div>
             </div>
-            <div class = "parent-image-pdg">
-                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.jpg");'></div>
+            <div class = "parent-image-pdg" style = "margin:auto;">
+                <div class = "pdg-img" style = 'background-image: url("../img/RomuPDG.png");background-position: -10px 20px;background-size: cover; background-repeat: no-repeat; transform:scale(1.3);'></div>
             </div>
-            <div class = "parent-image-pdg">
-                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.jpg");'></div>
+            <div class = "parent-image-pdg" style = "margin:auto;">
+                <div class = "pdg-img" style = 'background-image: url("../img/RenanPDG.png");background-position: -50px 0;background-size: cover; background-repeat: no-repeat; transform:scale(1.3);'></div>
             </div>
         </div>
     </div>
