--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -23,22 +23,23 @@
     <div class = "wrapper">
         <div id = "welcome-line"></div>
         <div id = "pdg-texts" style = "display:flex; align-items: center; justify-content: space-evenly; padding:1em; width:100%;">
-            <h2 class = "pdg-text">HEUB Tibaud</h2>
+            <h2 class = "pdg-text">HEUB Thibaud</h2>
             <h2 class = "pdg-text">MOISAN Romuald</h2>
             <h2 class = "pdg-text">RÉAUX Renan</h2>
         </div>
         
         <div id = "pdg-img" style = "display:flex; align-items: center; justify-content: space-evenly; padding:0 1em; width:100%;">
             <div class = "parent-image-pdg" style = "margin:auto;">
-                <div class = "pdg-img" style = 'background-image: url("../img/welcome-image.png");'></div>
+                <div class = "pdg-img" style = 'background-image: url("../img/ThibaudPDG.png");background-position: -10px 20px;background-size: cover; background-repeat: no-repeat; transform:scale(1.3);'></div>
             </div>
             <div class = "parent-image-pdg" style = "margin:auto;">
-                <div class = "pdg-img" style = 'background-image: url("../img/RomuPDG.png");background-position: -10px 20px;background-size: cover; background-repeat: no-repeat; transform:scale(1.3);'></div>
+                <div class = "pdg-img" style = 'background-image: url("../img/RomuPDG.png");background-position: 0 10px;background-size: cover; background-repeat: no-repeat; transform:scale(1.2);'></div>
             </div>
             <div class = "parent-image-pdg" style = "margin:auto;">
-                <div class = "pdg-img" style = 'background-image: url("../img/RenanPDG.png");background-position: -50px 0;background-size: cover; background-repeat: no-repeat; transform:scale(1.3);'></div>
+                <div class = "pdg-img" style = 'background-image: url("../img/RenanPDG.png");background-position:0 0;background-size: cover; background-repeat: no-repeat; transform:scale(1.1);'></div>
             </div>
         </div>
+        <div id = ></div>
     </div>
     <script src ="js/animations.js"></script>
 </body>
