--- a/views/pages/goals.ejs
+++ b/views/pages/goals.ejs
@@ -10,7 +10,55 @@
         <%if(utilisateur.testDone){%>
             <%-include("../partials/navbar-tested.ejs"); %>
             <h1>Objectifs</h1>
-            <h2 style = "color: var(--light-text-color); text-align: center;">Désolé, la page est en construction !</h2>
+            <div class = "wrapper">
+                <h2 style = "color: var(--light-text-color); text-align: center;">Désolé, la page est en construction !</h2>
+                <table>
+                    <thead>
+                       <tr>
+                            <th></th>
+                            <th>Vos résultats</th>
+                            <th>Objectifs à atteindre</th>
+                       </tr> 
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Poids</td>
+                            <td><%=utilisateur.info.weight%></td>
+                            <td><%=utilisateur.info.weight%></td>
+                        </tr>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Diastole</td>
+                            <td><%=utilisateur.info.diastolic%></td>
+                            <td><%=utilisateur.info.diastolic%></td>
+                        </tr>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Systole</td>
+                            <td><%=utilisateur.info.systolic%></td>
+                            <td><%=utilisateur.info.systolic%></td>
+                        </tr>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Attrapage</td>
+                            <td><%=utilisateur.info.grip%></td>
+                            <td><%=utilisateur.info.grip%></td>
+                        </tr>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Souplesse</td>
+                            <td><%=utilisateur.info.sitbend%></td>
+                            <td><%=utilisateur.info.sitbend%></td>
+                        </tr>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Crunches</td>
+                            <td><%=utilisateur.info.situps%></td>
+                            <td><%=utilisateur.info.situps%></td>
+                        </tr>
+                        <tr>
+                            <td style = "border-right:solid 1px black; color:var(--dark-text-color)">Saut</td>
+                            <td><%=utilisateur.info.broadjump%></td>
+                            <td><%=utilisateur.info.broadjump%></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         <%}%>
         <%if(!utilisateur.testDone){%>
             <%-include("../partials/navbar-nottested.ejs"); %>
